[package]
name = "disney_hls_parser"
version = "0.1.0"
edition = "2021"
authors = ["Suttipong Sukijthamapan <Suttipong.Sukijthamapan.-ND@disney.com>"]
description = "A HLS parser for Disney+"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
[dependencies]
anyhow = "1"

[dev-dependencies]
indoc = "2"
